applications/v4/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/ConflictException.java
package com.example.weeklyplanning.web.rest.errors;

import org.springframework.http.HttpStatus;

public class ConflictException extends BusinessException {

    public ConflictException(String message) {
        super(HttpStatus.CONFLICT, "CONFLICT", message);
    }
}
